Custom Makefile added

--- a/makefile.json
+++ b/makefile.json
@@ -64,6 +64,58 @@
 		],
 		"description": "Code snippet for C++ Makefile"
 	},
+	"custommakefile": {
+		"prefix": "custommakefile",
+		"body": [
+			"ECHO\t=\t/bin/echo -e",
+			"DEFAULT\t=\t\"\\033[00m\"",
+			"BOLD\t=\t\"\\033[1m\"",
+			"ITALIC\t=\t\"\\033[3m\"",
+			"GREEN\t=\t\"\\033[0;32m\"",
+			"TEAL\t=\t\"\\033[0;36m\"",
+			"RED\t=\t\"\\033[0;31m\"",
+			"YELLOW\t=\t\"\\033[0;33m\"",
+			"CC\t=\tgcc",
+			"",
+			"RM\t=\trm -f",
+			"",
+			"SRC\t=\t${1:File}.c",
+			"",
+			"OBJ\t=\t$(SRC:.c=.o)",
+			"",
+			"CFLAGS\t=\t-Iinclude -Wall -Wextra -Werror",
+			"",
+			"NAME\t=\t${2:Binary Name}",
+			"",
+			"all:\t\ttitle $(NAME)",
+			"",
+			"title:",
+			"\t\t@$(ECHO) $(TEAL)$(BOLD)\"[42sh compilation]\"$(DEFAULT)",
+			"",
+			"$(NAME):\t$(OBJ)",
+			"\t\t@$(CC) $(OBJ) -o $(NAME) $(CFLAGS) && \\",
+			"\t\t$(ECHO) $(YELLOW)$(BOLD)\"-- READY:\" $(NAME) \"--\"$(DEFAULT) || \\",
+			"\t\t$(ECHO) $(RED)$(BOLD)\"/!\\ FAILURE:\" $(NAME) \"/!\\ \"$(DEFAULT)",
+			"",
+			".c.o:",
+			"\t\t@$(CC) $(CFLAGS) -c $< -o $@ && \\",
+			"\t\t$(ECHO) $(GREEN)$(BOLD)\"[OK]\"$(DEFAULT)$(ITALIC) $< $(DEFAULT) || \\",
+			"\t\t$(ECHO) $(RED)\"[KO]\"$(DEFAULT)$(ITALIC) $< $(DEFAULT)",
+			"",
+			"clean:",
+			"\t\t$(RM) $(OBJ)",
+			"\t\t@$(ECHO) $(GREEN)$(BOLD)\"[clean]\"$(DEFAULT)",
+			"\t\t@$(ECHO) $(GREEN)$(BOLD)\"[fclean]\"$(DEFAULT)",
+			"",
+			"fclean:\t\tclean",
+			"\t\t$(RM) $(NAME)",
+			"",
+			"re:\t\tfclean all",
+			"",
+			".PHONY: all clean fclean re"
+		],
+		"description": "Code snippet for C Makefile"
+	},
 	"SFMLFlags": {
 		"prefix": "sfml",
 		"body": [
